// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.

syntax = "proto2";

message t_dls_stats_item {
   required uint32 count = 1;
   required uint32 total = 2;
   required uint32 min = 3;
   required uint32 max = 4;
}

message t_dls_traffic_stats_item {
   required uint32 count = 1;
   required uint32 total = 2;
}

message t_dls_stats {
   required uint32 du_ue_index = 1;
   required uint32 is_srb = 2;
   required uint32 rb_id = 3;
   required t_dls_stats_item pdu_window = 4;


   // PDUs transmitted
   required t_dls_traffic_stats_item pdu_tx_bytes = 5;
   // PDUs retransmitted
   required t_dls_traffic_stats_item pdu_retx_bytes = 6;
   // STATUS PDUs retransmitted
   required t_dls_traffic_stats_item pdu_status_bytes = 7;

   // retx counts
   required t_dls_stats_item pdu_retx_count = 8;
}

message rlc_dl_south_stats {
   required uint64 timestamp = 1;
   repeated t_dls_stats stats = 2;
}




